# llm-finetuning-resources

./: .gitignore  README.md  pyproject.toml
dataset-preparation/completion-tuning/: create_completion_dataset.py
dataset-preparation/conversation-tuning/: generate_chat_dataset.py
dataset-preparation/conversation-tuning/sample-dataset/conversation-format/: pg_conversation.jsonl
dataset-preparation/conversation-tuning/sample-dataset/pg-essay/: pg_essay_0.txt
finetuning/huggingface/: completion_finetuning.ipynb
finetuning/modal/: Dockerfile  ascii_art_completion_finetuning.py  paul_graham_chat_finetuning.py
finetuning/unsloth/: ascii_art_completion_finetuning.ipynb  conversation_finetuning_paul_graham.ipynb  conversation_finetuning_paul_graham2.ipynb  reasoning_grpo.ipynb
gguf-conversion/: Dockerfile  additional_resources.md  gguf_base_model.py
inference/: llama_cpp_inference.ipynb  llama_cpp_inference_chat.ipynb  llama_cpp_inference_completion_adapter.ipynb  openai-inference.ipynb
models/: ModelfileLlama31  add_model_to_ollama.md
